k8s/components/network-policy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: git-proxy
spec:
  podSelector:
    matchLabels:
      app: git-proxy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
      ports:
        - port: http
        - port: https
